--- a/pom.xml
+++ b/pom.xml
@@ -63,8 +63,8 @@ Version $Id: pom.xml,v 1.8 2009/02/20 15:21:28 michiel Exp $
       </dependency>
       <dependency>
         <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-        <version>3.1.0</version>
+        <artifactId>servlet-api</artifactId>
+        <version>2.5</version>
       </dependency>
        <dependency>
          <groupId>javax.servlet</groupId>
