--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         java-version: 11
     - name: Build with Maven
-      run: mvn -B -fae
+      run: mvn -B -fae install
     - name: Deploy with Maven
-      run: OSSRH_PASSWORD=${{ secrets.OSSRH_PASSWORD }} mvn -B -Ddeploy  -DskipTests=true -s $GITHUB_WORKSPACE/.github/settings.xml -Dgpg.skip=true
+      run: OSSRH_PASSWORD=${{ secrets.OSSRH_PASSWORD }} mvn -B -Ddeploy  -DskipTests=true -s $GITHUB_WORKSPACE/.github/settings.xml -Dgpg.skip=true deploy
       if: ${{ github.event_name == 'push' }}
 
