--- a/pom.xml
+++ b/pom.xml
@@ -50,9 +50,14 @@ Version $Id: pom.xml,v 1.8 2009/02/20 15:21:28 michiel Exp $
         <artifactId>mmbase-utils</artifactId>
         <version>2.0.1-SNAPSHOT</version>
       </dependency>
-       <dependency>
+      <dependency>
         <groupId>org.mmbase</groupId>
         <artifactId>mmbase-bridge</artifactId>
+        <version>2.0-SNAPSHOT</version>
+      </dependency>
+       <dependency>
+        <groupId>org.mmbase</groupId>
+        <artifactId>mmbase-rmmci</artifactId>
         <version>2.0-SNAPSHOT</version>
       </dependency>
       <dependency>
